# rmr

./: .gitignore  README.md  TestPlan.md  injectived.sh  setup.sh  setup_tst_usdt_perp.sh  usdt_proposal.json
injective_rmr_tests/: pyproject.toml
injective_rmr_tests/cli/: injectived_cli.py  utils.py
injective_rmr_tests/tests/: conftest.py  test_basic.py  test_rmr.py
