[tool.poetry]
name = "injective_rmr_tests"
packages = [{ include = "cli" }]
version = "0.1.0"
description = ""
authors = ["Piotr Stachyra <piotr.stachyra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
